modified spacing on index page for smaller screens - fixed issue with index page not fitting to the screen

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -6,6 +6,7 @@ html {
 body {
   width: 100%;
   height: 100%;
+  overflow-x: hidden;
 }
 
 .fullbackground{
@@ -155,6 +156,10 @@ h3{
     padding-top: 30px;
 }
 
+#index-logo-separater{
+    padding-top: 75px;
+}
+
 .top-pad-large{
     padding-top: 75px;
 }
@@ -264,6 +269,9 @@ h3{
         margin-left: 10px;
         margin-top: 25px;
     }
+    #index-logo-separater{
+        padding-top: 50px;
+    }
 }
 @media (max-width: 400px) {
     .computer-pictures{
@@ -289,6 +297,9 @@ h3{
         width: 95%;
         font-size: 1.5em;
         font-weight: 200;
+        padding-top: 20px;
+    }
+    #index-logo-separater{
         padding-top: 20px;
     }
 }
